# cef_ffmpeg_test

./: CMakeLists.txt  README.md  main.cpp
resources/htmls/: index1.html
resources/shaders/: basic.frag  basic.vert
src/common/: CMakeLists.txt
src/common/include/common/: app.h  common.h  settings.h  source_interface.h  utils.h
src/common/src/: settings.cpp  utils.cpp
src/render/: CMakeLists.txt
src/render/include/render/: resource_manager.h  system.h  window.h
src/render/src/: resource_manager.cpp  system.cpp  window.cpp
src/source/: CMakeLists.txt
src/source/include/source/: cef.h  ffmpeg.h
src/source/src/: cef.cpp  ffmpeg.cpp
